--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        philipyexushen {
+            keyAlias 'key0'
+            keyPassword 'abc123ABC'
+            storeFile file('F:/win10/Philip/Documents/AndroidFiles/key1.jks')
+            storePassword 'abc123ABC'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "philipyexushen.opencvhandler"
@@ -16,9 +24,29 @@ android {
         }
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            jniDebuggable true
+            signingConfig signingConfigs.philipyexushen
+            renderscriptDebuggable true
+            ndk {
+                debuggable = true
+                jniDebuggable true
+            }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            jniDebuggable true
+            signingConfig signingConfigs.philipyexushen
+            renderscriptDebuggable true
+            ndk {
+                debuggable = true
+                jniDebuggable true
+            }
         }
     }
     externalNativeBuild {
@@ -29,7 +57,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
